force-app/main/default/objects/Quote_Line_Benefit__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <label>Attribute Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Code__c</fullName>
        <label>Attribute Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Display_Name__c</fullName>
        <label>Attribute Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Long_Code__c</fullName>
        <label>Attribute Long Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value_Amount__c</fullName>
        <label>Attribute Value Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Disp_Sort__c</fullName>
        <description>this field used for sorting attribute categories in the porposal</description>
        <label>CPQ Disp Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Network_Display_Name__c</fullName>
        <label>In Network Display Name</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Base_Component_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Base Component Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Key_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Key Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rate_Impacting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rate Impacting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limits_and_Exceptions__c</fullName>
        <label>Limits and Exceptions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_Name__c</fullName>
        <formula>Parent_Quote_Line__r.Marketing_Plan__r.Name</formula>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Network_Display_Value__c</fullName>
        <label>Out of Network Display Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Quote Line</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Benefits</relationshipLabel>
        <relationshipName>Quote_Line_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>Parent_Quote_Line__r.Marketing_Plan_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pr_Quote_Id__c</fullName>
        <formula>Parent_Quote_Line__r.QuoteId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pr Quote Id</label>
        <type>Text</type>
    </fields>
    <label>Quote Line Benefits</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Category__c</columns>
        <columns>Attribute_Code__c</columns>
        <columns>Attribute_Display_Name__c</columns>
        <columns>Attribute_Long_Code__c</columns>
        <columns>Attribute_Value_Amount__c</columns>
        <columns>Component_Name__c</columns>
        <columns>Component_Type__c</columns>
        <columns>In_Network_Display_Name__c</columns>
        <columns>Is_Base_Component_Benefit__c</columns>
        <columns>Is_Key_Benefit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>QLB-{0000000000}</displayFormat>
        <label>Benefit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Line Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>